--- a/app/src/main/res/menu/main_game_editor.xml
+++ b/app/src/main/res/menu/main_game_editor.xml
@@ -10,6 +10,7 @@
         android:title=""
         android:icon="@drawable/ic_edit_black_24dp"
         app:showAsAction="ifRoom"
+        android:onClick="editPageName"
         />
 
     <item
@@ -17,6 +18,7 @@
         android:title=""
         android:icon="@drawable/ic_save_black_24dp"
         app:showAsAction="ifRoom"
+        android:onClick="savePage"
         />
 
     <item
@@ -24,6 +26,7 @@
         android:title=""
         android:icon="@drawable/ic_delete_black_24dp"
         app:showAsAction="ifRoom"
+        android:onClick="deletePage"
         />
 
     <item android:id="@+id/copy_shape"
