--- a/app/src/main/res/layout/activity_game_editor.xml
+++ b/app/src/main/res/layout/activity_game_editor.xml
@@ -17,6 +17,7 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <LinearLayout
+        android:id="@+id/entire_editor"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
@@ -29,7 +30,6 @@
             android:layout_height="match_parent"
             android:layout_weight="4"
             />
-
 
             <LinearLayout
                 android:id="@+id/right_panel"
@@ -172,6 +172,14 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/light_grey"
-        />
+        >
+
+        <LinearLayout
+            android:id="@+id/resource_scroll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        </LinearLayout>
+    </HorizontalScrollView>
 
 </LinearLayout>
