--- a/app/src/main/res/layout/properties_dialog.xml
+++ b/app/src/main/res/layout/properties_dialog.xml
@@ -20,9 +20,11 @@
             />
 
         <EditText
+            android:id="@+id/editable_X"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
             />
 
         <TextView
@@ -32,9 +34,11 @@
             />
 
         <EditText
+            android:id="@+id/editable_Y"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
             />
     </LinearLayout>
 
@@ -51,9 +55,11 @@
             />
 
         <EditText
+            android:id="@+id/editable_height"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
             />
 
         <TextView
@@ -63,13 +69,16 @@
             />
 
         <EditText
+            android:id="@+id/editable_width"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
             />
     </LinearLayout>
 
     <Switch
+        android:id="@+id/is_movable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/movable"
@@ -80,6 +89,7 @@
         />
 
     <Switch
+        android:id="@+id/is_hidden"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hidden"
