--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,69 +9,60 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
-    
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome to BunnyWorld"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:text="@string/app_name"
             android:gravity="center"
-            android:textSize="80sp"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/title"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="3"
-        android:gravity="center"
-        android:layout_height="wrap_content">
-
-        <Spinner
-            android:id="@+id/gamePage"
-            android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_height="wrap_content"/>
+            android:textSize="40sp"
+            android:textColor="@android:color/black"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_height="wrap_content">
+            android:gravity="center"
+            >
 
             <Button
-                android:id="@+id/start"
-                android:text="Start"
-                android:textSize="30sp"
-                android:textColor="@android:color/black"
+                android:id="@+id/play_game"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content"
-                android:onClick="startGame"/>
+                android:text="@string/play_game"
+                android:onClick="selectPlayGame"
+                android:layout_margin="25dp"
+                />
 
             <Button
-                android:id="@+id/edit"
-                android:text="Edit"
-                android:textSize="30sp"
-                android:textColor="@android:color/black"
+                android:id="@+id/create_game"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content"
-                android:onClick="editGame"/>
+                android:text="@string/create_game"
+                android:onClick="createGame"
+                android:layout_margin="25dp"
+                />
+
+            <Button
+                android:id="@+id/edit_game"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/edit_game"
+                android:onClick="selectEditGame"
+                android:layout_margin="25dp"
+                />
 
         </LinearLayout>
+
 
     </LinearLayout>
 
