--- a/app/src/main/res/layout/properties_dialog.xml
+++ b/app/src/main/res/layout/properties_dialog.xml
@@ -77,6 +77,30 @@
             />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/textLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_string_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text"
+            />
+
+        <EditText
+            android:id="@+id/editable_text_string"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/default_text_message"
+            />
+
+    </LinearLayout>
+
     <Switch
         android:id="@+id/is_movable"
         android:layout_width="wrap_content"
