--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="center"
         >
@@ -62,9 +63,14 @@
                 />
 
         </LinearLayout>
-
-
     </LinearLayout>
-
+    <Button
+        android:id="@+id/deleteAllButton"
+        android:onClick="deleteAllGames"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:text="@string/deletegames"
+        />
 </LinearLayout>
 
