fixed bugs with text obj properties in editor: hiding/showing correct edittexts, resizing, etc.

--- a/app/src/main/res/layout/properties_dialog.xml
+++ b/app/src/main/res/layout/properties_dialog.xml
@@ -43,6 +43,30 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/font_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/font"
+            />
+
+        <EditText
+            android:id="@+id/font_size"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/height_width_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
