--- a/app/src/main/res/menu/main_game_editor.xml
+++ b/app/src/main/res/menu/main_game_editor.xml
@@ -9,7 +9,7 @@
         android:title="@string/properties_panel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 
     <item
@@ -18,14 +18,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:actionViewClass="android.widget.Spinner"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 
     <item
         android:id="@+id/edit_page"
         android:title=""
         android:icon="@drawable/ic_edit_black_24dp"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:onClick="editPageName"
         />
 
@@ -33,7 +33,7 @@
         android:id="@+id/save_page"
         android:title=""
         android:icon="@drawable/ic_save_black_24dp"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:onClick="savePage"
         />
 
@@ -41,7 +41,7 @@
         android:id="@+id/delete_page"
         android:title=""
         android:icon="@drawable/ic_delete_black_24dp"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:onClick="deletePage"
         />
 
