--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/bunny"
     android:orientation="vertical"
+    android:id="@+id/background"
+    android:onClick="change_background"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -17,9 +19,9 @@
         >
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
             android:gravity="center"
             android:textSize="40sp"
             android:textColor="@android:color/black"
@@ -39,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/play_game"
                 android:onClick="selectPlayGame"
+                android:background="@drawable/custom_button"
                 android:layout_margin="25dp"
                 />
 
@@ -49,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/create_game"
                 android:onClick="createGame"
+                android:background="@drawable/custom_button"
                 android:layout_margin="25dp"
                 />
 
@@ -59,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/edit_game"
                 android:onClick="selectEditGame"
+                android:background="@drawable/custom_button"
                 android:layout_margin="25dp"
                 />
 
