--- a/app/src/main/res/layout/activity_game_editor.xml
+++ b/app/src/main/res/layout/activity_game_editor.xml
@@ -56,6 +56,16 @@
                     android:visibility="gone"
                     >
 
+                    <TextView
+                        android:id="@+id/error_shape"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:visibility="gone"
+                        />
+
                     <LinearLayout
                         android:id="@+id/editable_obj_name"
                         android:layout_width="match_parent"
