--- a/app/src/main/res/layout/name_editor.xml
+++ b/app/src/main/res/layout/name_editor.xml
@@ -3,7 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
+    android:orientation="vertical"
     >
+
+    <TextView
+        android:id="@+id/error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_red_dark"
+        android:visibility="gone"
+        />
 
     <EditText
         android:id="@+id/editable_page_name"
