--- a/app/src/main/res/layout/properties_dialog.xml
+++ b/app/src/main/res/layout/properties_dialog.xml
@@ -91,16 +91,66 @@
         android:orientation="horizontal"
         android:visibility="gone">
 
-        <TextView
+        <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Font Color (Enter Hex Value):"/>
+            android:id="@+id/color_options"
+            android:orientation="horizontal"
+            android:checkedButton="@+id/black"
+            android:layout_gravity="center_horizontal">
 
-        <EditText
-            android:id="@+id/textColor"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@id/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BLACK"
+                android:textSize="10sp"/>
+
+            <RadioButton
+                android:id="@+id/red"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RED"
+                android:textSize="10sp"/>
+
+
+
+            <RadioButton
+                android:id="@+id/yellow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="YELLOW"
+                android:textSize="10sp"/>
+
+            <RadioButton
+                android:id="@+id/green"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GREEN"
+                android:textSize="10sp"/>
+
+            <RadioButton
+                android:id="@+id/blue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BLUE"
+                android:textSize="10sp"/>
+
+            <RadioButton
+                android:id="@+id/magenta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MAGENTA"
+                android:textSize="10sp"/>
+
+            <RadioButton
+                android:id="@+id/gray"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GRAY"
+                android:textSize="10sp"/>
+
+        </RadioGroup>
 
     </LinearLayout>
 
