--- a/app/src/main/res/menu/main_game_editor.xml
+++ b/app/src/main/res/menu/main_game_editor.xml
@@ -115,5 +115,7 @@
 
     <item android:id="@+id/import_resource"
         android:title="@string/import_resource"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:onClick="importResource"
+        />
 </menu>
