added error checking in page dir

--- a/app/src/main/res/menu/page_dir_editor.xml
+++ b/app/src/main/res/menu/page_dir_editor.xml
@@ -21,6 +21,30 @@
         />
 
     <item
+        android:title="@string/error_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:showAsAction="always"
+        />
+
+    <item
+        android:id="@+id/error_icon_page"
+        android:title=""
+        android:icon="@drawable/ic_refresh_black_24dp"
+        app:showAsAction="always"
+        />
+
+    <item
+        android:id="@+id/error_button_page"
+        android:title="@string/check_errors"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:actionViewClass="android.widget.Button"
+        app:showAsAction="always"
+        />
+
+
+    <item
         android:id="@+id/edit_page"
         android:title=""
         android:icon="@drawable/ic_edit_black_24dp"
